Task 1: Updated README

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Zadania z kursu e-biznes
 
 Zadanie 1 Docker
+3.0 Instalacja Python 3.8 https://github.com/ShabazzKing/ebiznes2024/commit/9e989ee514481498a8d838eb827f1fe0f9c5acf5
+3.5 Instalacja Java 8 i Kotlin https://github.com/ShabazzKing/ebiznes2024/commit/68a47470ee58727e0fc75fda50e4b368dbe74b1c
 Kod: zadanie_1
